--- a/css/layout.css
+++ b/css/layout.css
@@ -54,4 +54,10 @@ body.menu {
     padding-top: 60px; /* Adjust for the fixed top menu */
 }
 
+@media (max-width: 600px) {
+  body.menu {
+    padding-top: 100px;
+  }
+}
+
 
